# SCFbackup

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
inc/: client.h  config.h  filesystem.h  hash.h  list.h  server.h
src/: CMakeLists.txt  client.c  client_main.c  config.c  filesystem.c  hash.c  list.c  server.c  server_main.c
